Changes for individual substitutions - models, classes and views - CloudKit capabilities - CloudKit public database sync

--- a/vertretungsplan-pgu/Info.plist
+++ b/vertretungsplan-pgu/Info.plist
@@ -32,7 +32,7 @@
 	<key>UILaunchScreen</key>
 	<dict/>
 	<key>UILaunchStoryboardName</key>
-	<string>launchscreen</string>
+	<string>launchscreen.storyboard</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
